crates/rcc_driver/tests/ui/parse/double_error_recovery.stderr
Error: expected primary expression
   ╭─[ crates/rcc_driver/tests/ui/parse/double_error_recovery.c:2:13 ]
   │
 2 │     int x = ;
───╯
Error: expected primary expression
   ╭─[ crates/rcc_driver/tests/ui/parse/double_error_recovery.c:3:13 ]
   │
 3 │     int y = ;
───╯
