crates/rcc_driver/tests/ui/parse/double_error_recovery.c
void f(void) {
    int x = ;
    int y = ;
}
